# llm-gateway

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  render.yaml
.github/workflows/: backfill-eval.yml  ci-backend.yml  ci-frontend.yml  drift-monitor.yml  keep-warm.yml  retrain-classifier.yml  traffic-engine.yml
backend/: Dockerfile  fly.toml  pyproject.toml
backend/app/: main.py
backend/app/api/: chat.py  eval.py  experiments.py  health.py  internal.py  keys.py  metrics.py
backend/app/core/: audit.py  auth.py  cache.py  config.py  db.py  ratelimit.py  security.py
backend/app/eval/: drift.py  grounding.py  judge.py  refusal.py  runner.py  toxicity.py
backend/app/eval/agentic/: __init__.py  graph.py  state.py
backend/app/experiments/: engine.py  splitter.py  stats.py
backend/app/gateway/: classifier.pkl  classifier.py  classifier_metrics.json  llm_client.py  pricing.py  router.py
backend/app/gateway/providers/: gemini_client.py  groq_client.py
backend/app/models/: schemas.py
backend/scripts/: backfill_evals.py  bootstrap_demo.py  drive_traffic.py  keep_warm.py  retrain_from_feedback.py  seed_dataset.py  train_classifier.py
backend/tests/: conftest.py  test_eval_agentic.py  test_experiments_stats.py  test_gateway.py  test_security.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/api/demo/chat/: route.ts
frontend/app/dashboard/: page.tsx
frontend/app/demo/: page.tsx
frontend/lib/: api.ts  supabase.ts
supabase/migrations/: 001_init.sql  002_rls.sql  003_indexes.sql  004_seed_demo_team.sql  005_add_judge_confidence.sql
